--- a/ionic-angular-course-project/capacitor.config.json
+++ b/ionic-angular-course-project/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "io.ionic.starter",
-  "appName": "ionic-angular-course",
+  "appName": "ionic-angular-course-project",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
