--- a/ionic-angular-course-project/package.json
+++ b/ionic-angular-course-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-angular-course",
+  "name": "ionic-angular-course-project",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
-    "@capacitor/core": "2.1.2",
+    "@capacitor/core": "2.2.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -34,7 +34,7 @@
     "@angular/compiler": "~9.1.6",
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
-    "@capacitor/cli": "2.1.2",
+    "@capacitor/cli": "2.2.0",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
